Project progress:  - created the qmorewidget shared lib    this library will contain all non-standard GUI widgets based on Qt  - new widget in qmorewidget: FloatSlider    started implementation together with writing test functions to verify the code    using googletest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.1)
 if(NOT PROJECT_NAME)
     project(libqmore
         VERSION 0.0
-        DESCRIPTION "Shared library containing non-standard Qt classes and widgets"
+        DESCRIPTION "Shared Qt/C++ library containing non-standard Qt classes and widgets"
         LANGUAGES C CXX)
 endif()
 
@@ -12,3 +12,16 @@ endif()
 # include CMakemodules directories
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules)
 include(QMoreProjectSettings)
+
+# set build options
+option(LIBQMORE_BUILD_TESTS "Build Google Tests test suite" ON)
+
+
+# add shared library qmorewidgets
+add_subdirectory(libqmorewidgets)
+
+# add googletest and libqmoretests if build option is on
+if(LIBQMORE_BUILD_TESTS)
+    add_subdirectory(thirdparty/googletest)
+    add_subdirectory(libqmoretests)
+endif()
