top level CMakeLists.txt: new custom cmake target to display extra files in the IDE's project tree (e.g. README.md)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,3 +25,7 @@ if(LIBQMORE_BUILD_TESTS)
     add_subdirectory(thirdparty/googletest)
     add_subdirectory(libqmoretests)
 endif()
+
+
+# Add a dummy non-built target to make Qt Creator IDE list additional files
+add_custom_target(extra SOURCES README.md)
