New executable "sliders"  - this executable serves for demonstrating the FloatSlider-Class

--- a/libqmorewidgets/CMakeLists.txt
+++ b/libqmorewidgets/CMakeLists.txt
@@ -12,3 +12,5 @@ target_include_directories(qmorewidgets PRIVATE ..)
 target_link_libraries(qmorewidgets PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
 target_compile_definitions(qmorewidgets PRIVATE QMOREWIDGETS_LIBRARY)
+
+qt5_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
