- finished working at floatslider class - implemented an example for Floatslider to show the basic use case - implemented LedIndicator class - added an example program for LedIndicator class to show the basic use case

--- a/libqmorewidgets/CMakeLists.txt
+++ b/libqmorewidgets/CMakeLists.txt
@@ -1,7 +1,9 @@
 add_library(qmorewidgets SHARED
   floatslider.cpp
+  ledindicator.cpp
 
   floatslider.h
+  ledindicator.h
   qmorewidgets_global.h
 
   ${CMAKE_SOURCE_DIR}/${TS_FILES}
